--- a/asm/6828.html
+++ b/asm/6828.html
@@ -41,7 +41,7 @@ Next: <a href="687D.html">687D</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="73B7.html">DemoModeInput</a>, <a href="757E.html">GameOver</a>, <a href="76D7.html">76D7</a>, <a href="E80E.html">InitialiseGame</a>, <a href="EB43.html">DisplayChangeControls</a> and <a href="ED52.html">DisplayInstructions</a>.
+Used by the routines at <a href="73B7.html">DemoModeInput</a>, <a href="757E.html">GameOver</a>, <a href="76D7.html">Handler_GhostRider</a>, <a href="E80E.html">InitialiseGame</a>, <a href="EB43.html">DisplayChangeControls</a> and <a href="ED52.html">DisplayInstructions</a>.
 </div>
 </div>
 </td>
