--- a/asm/692C.html
+++ b/asm/692C.html
@@ -41,7 +41,7 @@ Next: <a href="6992.html">6992</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="6B2D.html">Handler: PlayerSprite</a> and <a href="76D7.html">76D7</a>.
+Used by the routines at <a href="6B2D.html">Handler: PlayerSprite</a> and <a href="76D7.html">Handler_GhostRider</a>.
 </div>
 </div>
 <table class="input">
