--- a/asm/6CAA.html
+++ b/asm/6CAA.html
@@ -57,7 +57,7 @@ Used by the routines at <a href="6D21.html">6D21</a>, <a href="E800.html">Initia
 <span id="6cad"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routine at <a href="76D7.html">76D7</a>.
+This entry point is used by the routine at <a href="76D7.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
