--- a/asm/6E18.html
+++ b/asm/6E18.html
@@ -732,7 +732,7 @@ Play the "player dead" audio.
 <span id="6ed4"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routines at <a href="7161.html">7161</a> and <a href="76D7.html">76D7</a>.
+This entry point is used by the routines at <a href="7161.html">Check_DemoMode</a> and <a href="76D7.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
