--- a/asm/7161.html
+++ b/asm/7161.html
@@ -35,7 +35,7 @@ Next: <a href="7167.html">7167</a>
 </td>
 </tr>
 </table>
-<div class="description">7161: Routine at 7161</div>
+<div class="description">7161: Check Demo Mode</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -47,11 +47,13 @@ Used by the routine at <a href="763C.html">Handler_Fuel</a>.
 </td>
 </tr>
 <tr>
+<td class="asm-label">Check_DemoMode</td>
 <td class="address-2"><span id="7161"></span>7161</td>
 <td class="instruction">CALL <a href="7535.html">PrintDemoMode</a></td>
 <td class="comment-1" rowspan="1">Call <a href="7535.html">PrintDemoMode</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="7164"></span>7164</td>
 <td class="instruction">JP <a href="6E18.html#6ed4">$6ED4</a></td>
 <td class="comment-1" rowspan="1">Jump to <a href="6E18.html#6ed4">6ED4</a>.</td>
