--- a/asm/716E.html
+++ b/asm/716E.html
@@ -503,7 +503,7 @@ Used by the routine at <a href="7311.html">7311</a>.
 </tr>
 <tr>
 <td class="address-1"><span id="71ee"></span>71EE</td>
-<td class="instruction">CALL <a href="76D7.html">$76D7</a></td>
+<td class="instruction">CALL <a href="76D7.html">Handler_GhostRider</a></td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 <tr>
