--- a/asm/7311.html
+++ b/asm/7311.html
@@ -56,7 +56,7 @@ Used by the routine at <a href="6C00.html">Game_Loop</a>.
 <span id="7314"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routine at <a href="76D7.html">76D7</a>.
+This entry point is used by the routine at <a href="76D7.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
@@ -254,7 +254,12 @@ This entry point is used by the routine at <a href="76D7.html">76D7</a>.
 <tr>
 <td class="address-1"><span id="7354"></span>7354</td>
 <td class="instruction">LD C,$44</td>
-<td class="comment-1" rowspan="1"><span class="register">C</span>=44.</td>
+<td class="comment-1" rowspan="1"><span class="register">C</span>=INK:
+GREEN,
+PAPER:
+BLACK
+(BRIGHT)
+.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="7356"></span>7356</td>
@@ -278,8 +283,8 @@ This entry point is used by the routine at <a href="76D7.html">76D7</a>.
 </tr>
 <tr>
 <td class="address-1"><span id="735d"></span>735D</td>
-<td class="instruction">CALL <a href="76D7.html">$76D7</a></td>
-<td class="comment-1" rowspan="1">Call <a href="76D7.html">76D7</a>.</td>
+<td class="instruction">CALL <a href="76D7.html">Handler_GhostRider</a></td>
+<td class="comment-1" rowspan="1">Call <a href="76D7.html">Handler_GhostRider</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="7360"></span>7360</td>
@@ -410,8 +415,8 @@ This entry point is used by the routine at <a href="76D7.html">76D7</a>.
 </tr>
 <tr>
 <td class="address-1"><span id="738c"></span>738C</td>
-<td class="instruction">CALL <a href="76D7.html">$76D7</a></td>
-<td class="comment-1" rowspan="1">Call <a href="76D7.html">76D7</a>.</td>
+<td class="instruction">CALL <a href="76D7.html">Handler_GhostRider</a></td>
+<td class="comment-1" rowspan="1">Call <a href="76D7.html">Handler_GhostRider</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="738f"></span>738F</td>
