--- a/asm/763C.html
+++ b/asm/763C.html
@@ -49,8 +49,8 @@ Used by the routine at <a href="6C00.html">Game_Loop</a>.
 <tr>
 <td class="asm-label">Handler_Fuel</td>
 <td class="address-2"><span id="763c"></span>763C</td>
-<td class="instruction">CALL <a href="7420.html">$7420</a></td>
-<td class="comment-1" rowspan="1">Call <a href="7420.html">7420</a>.</td>
+<td class="instruction">CALL <a href="7420.html">UpdateScoreDisplay</a></td>
+<td class="comment-1" rowspan="1">Call <a href="7420.html">UpdateScoreDisplay</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -364,8 +364,8 @@ Reset the players fuel and restart the game.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="7697"></span>7697</td>
-<td class="instruction">JP <a href="7161.html">$7161</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="7161.html">7161</a>.</td>
+<td class="instruction">JP <a href="7161.html">Check_DemoMode</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="7161.html">Check_DemoMode</a>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
