--- a/asm/7844.html
+++ b/asm/7844.html
@@ -31,7 +31,7 @@ Prev: <a href="7843.html">7843</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#7844">Map</a></td>
 <td class="next">
-Next: <a href="784B.html">784B</a>
+Next: <a href="7846.html">7846</a>
 </td>
 </tr>
 </table>
@@ -46,19 +46,7 @@ Next: <a href="784B.html">784B</a>
 <tr>
 <td class="asm-label">Score</td>
 <td class="address-1"><span id="7844"></span>7844</td>
-<td class="instruction">DEFB $00,$00</td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="7846"></span>7846</td>
-<td class="instruction">DEFB $05,$00</td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="7848"></span>7848</td>
-<td class="instruction">DEFB $00,$00,$00</td>
+<td class="instruction">DEFW $0000</td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 </table>
@@ -69,7 +57,7 @@ Prev: <a href="7843.html">7843</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#7844">Map</a></td>
 <td class="next">
-Next: <a href="784B.html">784B</a>
+Next: <a href="7846.html">7846</a>
 </td>
 </tr>
 </table>
