--- a/asm/784B.html
+++ b/asm/784B.html
@@ -27,7 +27,7 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="7844.html">7844</a>
+Prev: <a href="7848.html">7848</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#784b">Map</a></td>
 <td class="next">
@@ -35,7 +35,7 @@ Next: <a href="7850.html">7850</a>
 </td>
 </tr>
 </table>
-<div class="description">784B: Target</div>
+<div class="description">784B: Displayed Score</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -44,7 +44,7 @@ Next: <a href="7850.html">7850</a>
 </td>
 </tr>
 <tr>
-<td class="asm-label">Target</td>
+<td class="asm-label">DisplayedScore</td>
 <td class="address-1"><span id="784b"></span>784B</td>
 <td class="instruction">DEFB $03,$04,$00,$00,$02</td>
 <td class="comment-0" rowspan="1"></td>
@@ -53,7 +53,7 @@ Next: <a href="7850.html">7850</a>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="7844.html">7844</a>
+Prev: <a href="7848.html">7848</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#784b">Map</a></td>
 <td class="next">
