--- a/asm/ECAB.html
+++ b/asm/ECAB.html
@@ -157,8 +157,8 @@ Print "KEY IN 1ST CHARACTER OF CODE" to the screen.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="eccb"></span>ECCB</td>
-<td class="instruction">CALL <a href="EC6E.html">$EC6E</a></td>
-<td class="comment-1" rowspan="1">Call <a href="EC6E.html">EC6E</a>.</td>
+<td class="instruction">CALL <a href="EC6E.html">PlayerInput</a></td>
+<td class="comment-1" rowspan="1">Call <a href="EC6E.html">PlayerInput</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -329,8 +329,8 @@ Updates the number suffix in the messaging.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="ecfc"></span>ECFC</td>
-<td class="instruction">CALL <a href="EC6E.html">$EC6E</a></td>
-<td class="comment-1" rowspan="1">Call <a href="EC6E.html">EC6E</a>.</td>
+<td class="instruction">CALL <a href="EC6E.html">PlayerInput</a></td>
+<td class="comment-1" rowspan="1">Call <a href="EC6E.html">PlayerInput</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
