--- a/buffers/gbuffer.html
+++ b/buffers/gbuffer.html
@@ -333,9 +333,27 @@ See <a href="../asm/6414.html">SetRandomNumberSeed</a> for how this is generated
 </tr>
 <tr>
 <td class="map-g"><span id="7844"></span><a href="../asm/7844.html">7844</a></td>
-<td class="map-length">7</td>
+<td class="map-length">2</td>
 <td class="map-g-desc">
 <div class="map-entry-title-11"><a class="map-entry-title" href="../asm/7844.html">Score</a></div>
+<div class="map-entry-desc">
+</div>
+</td>
+</tr>
+<tr>
+<td class="map-g"><span id="7846"></span><a href="../asm/7846.html">7846</a></td>
+<td class="map-length">2</td>
+<td class="map-g-desc">
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/7846.html">Game status buffer entry at 7846</a></div>
+<div class="map-entry-desc">
+</div>
+</td>
+</tr>
+<tr>
+<td class="map-g"><span id="7848"></span><a href="../asm/7848.html">7848</a></td>
+<td class="map-length">3</td>
+<td class="map-g-desc">
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/7848.html">Game status buffer entry at 7848</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
@@ -344,7 +362,7 @@ See <a href="../asm/6414.html">SetRandomNumberSeed</a> for how this is generated
 <td class="map-g"><span id="784b"></span><a href="../asm/784B.html">784B</a></td>
 <td class="map-length">5</td>
 <td class="map-g-desc">
-<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/784B.html">Target</a></div>
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/784B.html">Displayed Score</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
