--- a/dec/asm/26797.html
+++ b/dec/asm/26797.html
@@ -41,7 +41,7 @@ Next: <a href="26856.html">26856</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="27308.html">27308</a>, <a href="27648.html">Game_Loop</a>, <a href="28184.html">28184</a>, <a href="30268.html">Handler_Fuel</a> and <a href="30423.html">30423</a>.
+Used by the routines at <a href="27308.html">27308</a>, <a href="27648.html">Game_Loop</a>, <a href="28184.html">28184</a>, <a href="30268.html">Handler_Fuel</a> and <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
