--- a/dec/asm/27437.html
+++ b/dec/asm/27437.html
@@ -41,7 +41,7 @@ Next: <a href="27460.html">27460</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="28184.html">28184</a>, <a href="29457.html">29457</a>, <a href="30268.html">Handler_Fuel</a> and <a href="30423.html">30423</a>.
+Used by the routines at <a href="28184.html">28184</a>, <a href="29457.html">29457</a>, <a href="30268.html">Handler_Fuel</a> and <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
