--- a/dec/asm/27818.html
+++ b/dec/asm/27818.html
@@ -57,7 +57,7 @@ Used by the routines at <a href="27937.html">27937</a>, <a href="59392.html">Ini
 <span id="27821"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routine at <a href="30423.html">30423</a>.
+This entry point is used by the routine at <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
