--- a/dec/asm/28184.html
+++ b/dec/asm/28184.html
@@ -732,7 +732,7 @@ Play the "player dead" audio.
 <span id="28372"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routines at <a href="29025.html">29025</a> and <a href="30423.html">30423</a>.
+This entry point is used by the routines at <a href="29025.html">Check_DemoMode</a> and <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
