--- a/dec/asm/29025.html
+++ b/dec/asm/29025.html
@@ -35,7 +35,7 @@ Next: <a href="29031.html">29031</a>
 </td>
 </tr>
 </table>
-<div class="description">29025: Routine at 7161</div>
+<div class="description">29025: Check Demo Mode</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -47,11 +47,13 @@ Used by the routine at <a href="30268.html">Handler_Fuel</a>.
 </td>
 </tr>
 <tr>
+<td class="asm-label">Check_DemoMode</td>
 <td class="address-2"><span id="29025"></span>29025</td>
 <td class="instruction">CALL <a href="30005.html">PrintDemoMode</a></td>
 <td class="comment-1" rowspan="1">Call <a href="30005.html">PrintDemoMode</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="29028"></span>29028</td>
 <td class="instruction">JP <a href="28184.html#28372">28372</a></td>
 <td class="comment-1" rowspan="1">Jump to <a href="28184.html#28372">28372</a>.</td>
