--- a/dec/asm/29457.html
+++ b/dec/asm/29457.html
@@ -56,7 +56,7 @@ Used by the routine at <a href="27648.html">Game_Loop</a>.
 <span id="29460"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routine at <a href="30423.html">30423</a>.
+This entry point is used by the routine at <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
@@ -254,7 +254,12 @@ This entry point is used by the routine at <a href="30423.html">30423</a>.
 <tr>
 <td class="address-1"><span id="29524"></span>29524</td>
 <td class="instruction">LD C,68</td>
-<td class="comment-1" rowspan="1"><span class="register">C</span>=68.</td>
+<td class="comment-1" rowspan="1"><span class="register">C</span>=INK:
+GREEN,
+PAPER:
+BLACK
+(BRIGHT)
+.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="29526"></span>29526</td>
@@ -278,8 +283,8 @@ This entry point is used by the routine at <a href="30423.html">30423</a>.
 </tr>
 <tr>
 <td class="address-1"><span id="29533"></span>29533</td>
-<td class="instruction">CALL <a href="30423.html">30423</a></td>
-<td class="comment-1" rowspan="1">Call <a href="30423.html">30423</a>.</td>
+<td class="instruction">CALL <a href="30423.html">Handler_GhostRider</a></td>
+<td class="comment-1" rowspan="1">Call <a href="30423.html">Handler_GhostRider</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="29536"></span>29536</td>
@@ -410,8 +415,8 @@ This entry point is used by the routine at <a href="30423.html">30423</a>.
 </tr>
 <tr>
 <td class="address-1"><span id="29580"></span>29580</td>
-<td class="instruction">CALL <a href="30423.html">30423</a></td>
-<td class="comment-1" rowspan="1">Call <a href="30423.html">30423</a>.</td>
+<td class="instruction">CALL <a href="30423.html">Handler_GhostRider</a></td>
+<td class="comment-1" rowspan="1">Call <a href="30423.html">Handler_GhostRider</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="29583"></span>29583</td>
