--- a/dec/asm/29891.html
+++ b/dec/asm/29891.html
@@ -41,7 +41,7 @@ Next: <a href="29907.html">29907</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="30005.html">PrintDemoMode</a>, <a href="30078.html">GameOver</a>, <a href="30268.html">Handler_Fuel</a>, <a href="30423.html">30423</a>, <a href="30688.html">30688</a> and <a href="60754.html">DisplayInstructions</a>.
+Used by the routines at <a href="30005.html">PrintDemoMode</a>, <a href="30078.html">GameOver</a>, <a href="30268.html">Handler_Fuel</a>, <a href="30423.html">Handler_GhostRider</a>, <a href="30688.html">30688</a> and <a href="60754.html">DisplayInstructions</a>.
 </div>
 </div>
 <table class="input">
