--- a/dec/asm/30122.html
+++ b/dec/asm/30122.html
@@ -556,14 +556,14 @@ Set the screen buffer position.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30250"></span>30250</td>
-<td class="instruction">CALL <a href="29728.html#29740">29740</a></td>
-<td class="comment-1" rowspan="1">Call <a href="29728.html#29740">29740</a>.</td>
+<td class="instruction">CALL <a href="29728.html#29740">ForceScoreUpdate</a></td>
+<td class="comment-1" rowspan="1">Call <a href="29728.html#29740">ForceScoreUpdate</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30253"></span>30253</td>
 <td class="instruction">LD HL,(30792)</td>
-<td class="comment-1" rowspan="1"><span class="register">HL</span>=*<a href="30788.html#30792">30792</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">HL</span>=*<a href="30792.html">30792</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -586,8 +586,8 @@ Set the screen buffer position.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30261"></span>30261</td>
-<td class="instruction">CALL <a href="29728.html#29748">29748</a></td>
-<td class="comment-1" rowspan="1">Call <a href="29728.html#29748">29748</a>.</td>
+<td class="instruction">CALL <a href="29728.html#29748">ConvertScoreToDigits</a></td>
+<td class="comment-1" rowspan="1">Call <a href="29728.html#29748">ConvertScoreToDigits</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
