--- a/dec/asm/30788.html
+++ b/dec/asm/30788.html
@@ -31,7 +31,7 @@ Prev: <a href="30787.html">30787</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#30788">Map</a></td>
 <td class="next">
-Next: <a href="30795.html">30795</a>
+Next: <a href="30790.html">30790</a>
 </td>
 </tr>
 </table>
@@ -46,19 +46,7 @@ Next: <a href="30795.html">30795</a>
 <tr>
 <td class="asm-label">Score</td>
 <td class="address-1"><span id="30788"></span>30788</td>
-<td class="instruction">DEFB 0,0</td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="30790"></span>30790</td>
-<td class="instruction">DEFB 5,0</td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="30792"></span>30792</td>
-<td class="instruction">DEFB 0,0,0</td>
+<td class="instruction">DEFW 0</td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 </table>
@@ -69,7 +57,7 @@ Prev: <a href="30787.html">30787</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#30788">Map</a></td>
 <td class="next">
-Next: <a href="30795.html">30795</a>
+Next: <a href="30790.html">30790</a>
 </td>
 </tr>
 </table>
