--- a/dec/asm/30792.html
+++ b/dec/asm/30792.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wheelie: Routine at 60515</title>
+<title>Wheelie: Game status buffer entry at 30792</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../wheelie.css" />
 <link rel="stylesheet" type="text/css" href="../skoolkit.css" />
@@ -17,68 +17,46 @@ gtag('js', new Date());
 gtag('config', 'G-75RERFCHBG');
 </script>
 </head>
-<body class="Asm-c">
+<body class="Asm-g">
 <table class="header">
 <tr>
 <td class="logo"><a href="../index.html"><img alt="logo" src="../images/logo.png" /></a></td>
-<td class="page-header">Routines</td>
+<td class="page-header">Game status buffer</td>
 </tr>
 </table>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="60510.html">60510</a>
+Prev: <a href="30790.html">30790</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#60515">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#30792">Map</a></td>
 <td class="next">
-Next: <a href="60520.html">60520</a>
+Next: <a href="30795.html">30795</a>
 </td>
 </tr>
 </table>
-<div class="description">60515: Sounds: The Race Is On!</div>
+<div class="description">30792: Game status buffer entry at 7848</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
-<div class="paragraph">
-Used by the routine at <a href="30423.html">Handler_GhostRider</a>.
-</div>
 </div>
 </td>
 </tr>
 <tr>
-<td class="routine-comment" colspan="5">
-<span id="60515"></span>
-<div class="comments">
-<div class="paragraph">
-<audio controls="" src="../../audio/race-is-on.wav">
-<p>Your browser doesn't support HTML5 audio. Here is a <a href="../../audio/race-is-on.wav">link to the audio</a> instead.</p>
-</audio>
-</div>
-</div>
-</td>
-</tr>
-<tr>
-<td class="asm-label">Sounds_TheRaceIsOn</td>
-<td class="address-2"><span id="60515"></span>60515</td>
-<td class="instruction">LD HL,61263</td>
-<td class="comment-1" rowspan="1"><span class="register">HL</span>=<a href="61263.html">MelodyData_RaceIsOn</a>.</td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="60518"></span>60518</td>
-<td class="instruction">JR <a href="60469.html">PlayMelody</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="60469.html">PlayMelody</a>.</td>
+<td class="address-1"><span id="30792"></span>30792</td>
+<td class="instruction">DEFB 0,0,0</td>
+<td class="comment-0" rowspan="1"></td>
 </tr>
 </table>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="60510.html">60510</a>
+Prev: <a href="30790.html">30790</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#60515">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#30792">Map</a></td>
 <td class="next">
-Next: <a href="60520.html">60520</a>
+Next: <a href="30795.html">30795</a>
 </td>
 </tr>
 </table>
@@ -87,7 +65,7 @@ Next: <a href="60520.html">60520</a>
 <div class="copyright">&copy; 1983 Microsphere &copy; 2024 ArcadeGeek LTD.</div>
 <div class="created">Created using <a href="https://skoolkit.ca">SkoolKit</a> 9.6.</div>
 <div class="repository">Link to <a rel="noopener nofollow" href="https://github.com/pobtastic/wheelie/">Source code</a>.</div>
-<div><a href="../../asm/EC63.html">Switch to hexadecimal</a>.</div>
+<div><a href="../../asm/7848.html">Switch to hexadecimal</a>.</div>
 </footer>
 </body>
 </html>
