--- a/dec/asm/60526.html
+++ b/dec/asm/60526.html
@@ -35,7 +35,7 @@ Next: <a href="60556.html">60556</a>
 </td>
 </tr>
 </table>
-<div class="description">60526: Routine at EC6E</div>
+<div class="description">60526: Player Input</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -47,7 +47,7 @@ Used by the routine at <a href="60587.html">CheckPassword</a>.
 </td>
 </tr>
 <tr>
-<td class="asm-label"></td>
+<td class="asm-label">PlayerInput</td>
 <td class="address-2"><span id="60526"></span>60526</td>
 <td class="instruction">LD (IY+7),0</td>
 <td class="comment-1" rowspan="1">Write 0 (cursor type "C", "K" or "L") to *<a rel="noopener nofollow" href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C41.html">MODE</a>.</td>
