--- a/dec/maps/routines.html
+++ b/dec/maps/routines.html
@@ -351,7 +351,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="29025"></span><a href="../asm/29025.html">29025</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/29025.html">Routine at 7161</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/29025.html">Check Demo Mode</a></div>
 </td>
 </tr>
 <tr>
@@ -399,7 +399,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="29728"></span><a href="../asm/29728.html">29728</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/29728.html">Routine at 7420</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/29728.html">Update Score Display</a></div>
 </td>
 </tr>
 <tr>
@@ -477,7 +477,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="30423"></span><a href="../asm/30423.html">30423</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30423.html">Routine at 76D7</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30423.html">Handler: Ghost Rider</a></div>
 </td>
 </tr>
 <tr>
@@ -597,7 +597,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="60526"></span><a href="../asm/60526.html">60526</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60526.html">Routine at EC6E</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60526.html">Player Input</a></div>
 </td>
 </tr>
 <tr>
