--- a/maps/routines.html
+++ b/maps/routines.html
@@ -351,7 +351,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="7161"></span><a href="../asm/7161.html">7161</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7161.html">Routine at 7161</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7161.html">Check Demo Mode</a></div>
 </td>
 </tr>
 <tr>
@@ -399,7 +399,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="7420"></span><a href="../asm/7420.html">7420</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7420.html">Routine at 7420</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7420.html">Update Score Display</a></div>
 </td>
 </tr>
 <tr>
@@ -477,7 +477,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="76d7"></span><a href="../asm/76D7.html">76D7</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/76D7.html">Routine at 76D7</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/76D7.html">Handler: Ghost Rider</a></div>
 </td>
 </tr>
 <tr>
@@ -597,7 +597,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="ec6e"></span><a href="../asm/EC6E.html">EC6E</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC6E.html">Routine at EC6E</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC6E.html">Player Input</a></div>
 </td>
 </tr>
 <tr>
