--- a/asm/6B2D.html
+++ b/asm/6B2D.html
@@ -41,7 +41,7 @@ Next: <a href="6B44.html">6B44</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="6E18.html">6E18</a>, <a href="7311.html">7311</a>, <a href="763C.html">Handler_Fuel</a> and <a href="76D7.html">76D7</a>.
+Used by the routines at <a href="6E18.html">6E18</a>, <a href="7311.html">7311</a>, <a href="763C.html">Handler_Fuel</a> and <a href="76D7.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
