--- a/asm/74C3.html
+++ b/asm/74C3.html
@@ -41,7 +41,7 @@ Next: <a href="74D3.html">74D3</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="7535.html">PrintDemoMode</a>, <a href="757E.html">GameOver</a>, <a href="763C.html">Handler_Fuel</a>, <a href="76D7.html">76D7</a>, <a href="77E0.html">77E0</a> and <a href="ED52.html">DisplayInstructions</a>.
+Used by the routines at <a href="7535.html">PrintDemoMode</a>, <a href="757E.html">GameOver</a>, <a href="763C.html">Handler_Fuel</a>, <a href="76D7.html">Handler_GhostRider</a>, <a href="77E0.html">77E0</a> and <a href="ED52.html">DisplayInstructions</a>.
 </div>
 </div>
 <table class="input">
