--- a/asm/7535.html
+++ b/asm/7535.html
@@ -41,7 +41,7 @@ Next: <a href="754F.html">754F</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="7161.html">7161</a>, <a href="754F.html">InitialiseNewGame</a> and <a href="76D7.html">76D7</a>.
+Used by the routines at <a href="7161.html">Check_DemoMode</a>, <a href="754F.html">InitialiseNewGame</a> and <a href="76D7.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
