--- a/asm/75AA.html
+++ b/asm/75AA.html
@@ -556,14 +556,14 @@ Set the screen buffer position.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="762a"></span>762A</td>
-<td class="instruction">CALL <a href="7420.html#742c">$742C</a></td>
-<td class="comment-1" rowspan="1">Call <a href="7420.html#742c">742C</a>.</td>
+<td class="instruction">CALL <a href="7420.html#742c">ForceScoreUpdate</a></td>
+<td class="comment-1" rowspan="1">Call <a href="7420.html#742c">ForceScoreUpdate</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="762d"></span>762D</td>
 <td class="instruction">LD HL,($7848)</td>
-<td class="comment-1" rowspan="1"><span class="register">HL</span>=*<a href="7844.html#7848">7848</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">HL</span>=*<a href="7848.html">7848</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -586,8 +586,8 @@ Set the screen buffer position.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="7635"></span>7635</td>
-<td class="instruction">CALL <a href="7420.html#7434">$7434</a></td>
-<td class="comment-1" rowspan="1">Call <a href="7420.html#7434">7434</a>.</td>
+<td class="instruction">CALL <a href="7420.html#7434">ConvertScoreToDigits</a></td>
+<td class="comment-1" rowspan="1">Call <a href="7420.html#7434">ConvertScoreToDigits</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
