--- a/asm/EC5E.html
+++ b/asm/EC5E.html
@@ -41,7 +41,7 @@ Next: <a href="EC63.html">EC63</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="76D7.html">76D7</a>.
+Used by the routine at <a href="76D7.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
