--- a/asm/ED39.html
+++ b/asm/ED39.html
@@ -41,7 +41,7 @@ Next: <a href="ED52.html">ED52</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="76D7.html">76D7</a>.
+Used by the routine at <a href="76D7.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
