--- a/dec/asm/26664.html
+++ b/dec/asm/26664.html
@@ -41,7 +41,7 @@ Next: <a href="26749.html">26749</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="29623.html">DemoModeInput</a>, <a href="30078.html">GameOver</a>, <a href="30423.html">30423</a>, <a href="59406.html">InitialiseGame</a>, <a href="60227.html">DisplayChangeControls</a> and <a href="60754.html">DisplayInstructions</a>.
+Used by the routines at <a href="29623.html">DemoModeInput</a>, <a href="30078.html">GameOver</a>, <a href="30423.html">Handler_GhostRider</a>, <a href="59406.html">InitialiseGame</a>, <a href="60227.html">DisplayChangeControls</a> and <a href="60754.html">DisplayInstructions</a>.
 </div>
 </div>
 </td>
