--- a/dec/asm/26924.html
+++ b/dec/asm/26924.html
@@ -41,7 +41,7 @@ Next: <a href="27026.html">27026</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="27437.html">Handler: PlayerSprite</a> and <a href="30423.html">30423</a>.
+Used by the routines at <a href="27437.html">Handler: PlayerSprite</a> and <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 <table class="input">
