--- a/dec/asm/27977.html
+++ b/dec/asm/27977.html
@@ -41,7 +41,7 @@ Next: <a href="28054.html">28054</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="27308.html">27308</a> and <a href="30423.html">30423</a>.
+Used by the routines at <a href="27308.html">27308</a> and <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
