--- a/dec/asm/29038.html
+++ b/dec/asm/29038.html
@@ -503,7 +503,7 @@ Used by the routine at <a href="29457.html">29457</a>.
 </tr>
 <tr>
 <td class="address-1"><span id="29166"></span>29166</td>
-<td class="instruction">CALL <a href="30423.html">30423</a></td>
+<td class="instruction">CALL <a href="30423.html">Handler_GhostRider</a></td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 <tr>
