--- a/dec/asm/30005.html
+++ b/dec/asm/30005.html
@@ -41,7 +41,7 @@ Next: <a href="30031.html">30031</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="29025.html">29025</a>, <a href="30031.html">InitialiseNewGame</a> and <a href="30423.html">30423</a>.
+Used by the routines at <a href="29025.html">Check_DemoMode</a>, <a href="30031.html">InitialiseNewGame</a> and <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
