--- a/dec/asm/30268.html
+++ b/dec/asm/30268.html
@@ -49,8 +49,8 @@ Used by the routine at <a href="27648.html">Game_Loop</a>.
 <tr>
 <td class="asm-label">Handler_Fuel</td>
 <td class="address-2"><span id="30268"></span>30268</td>
-<td class="instruction">CALL <a href="29728.html">29728</a></td>
-<td class="comment-1" rowspan="1">Call <a href="29728.html">29728</a>.</td>
+<td class="instruction">CALL <a href="29728.html">UpdateScoreDisplay</a></td>
+<td class="comment-1" rowspan="1">Call <a href="29728.html">UpdateScoreDisplay</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -364,8 +364,8 @@ Reset the players fuel and restart the game.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30359"></span>30359</td>
-<td class="instruction">JP <a href="29025.html">29025</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="29025.html">29025</a>.</td>
+<td class="instruction">JP <a href="29025.html">Check_DemoMode</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="29025.html">Check_DemoMode</a>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
