--- a/dec/asm/30795.html
+++ b/dec/asm/30795.html
@@ -27,7 +27,7 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="30788.html">30788</a>
+Prev: <a href="30792.html">30792</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#30795">Map</a></td>
 <td class="next">
@@ -35,7 +35,7 @@ Next: <a href="30800.html">30800</a>
 </td>
 </tr>
 </table>
-<div class="description">30795: Target</div>
+<div class="description">30795: Displayed Score</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -44,7 +44,7 @@ Next: <a href="30800.html">30800</a>
 </td>
 </tr>
 <tr>
-<td class="asm-label">Target</td>
+<td class="asm-label">DisplayedScore</td>
 <td class="address-1"><span id="30795"></span>30795</td>
 <td class="instruction">DEFB 3,4,0,0,2</td>
 <td class="comment-0" rowspan="1"></td>
@@ -53,7 +53,7 @@ Next: <a href="30800.html">30800</a>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="30788.html">30788</a>
+Prev: <a href="30792.html">30792</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#30795">Map</a></td>
 <td class="next">
