--- a/dec/asm/60458.html
+++ b/dec/asm/60458.html
@@ -41,7 +41,7 @@ Next: <a href="60469.html">60469</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="30423.html">30423</a>.
+Used by the routine at <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
@@ -62,8 +62,8 @@ Used by the routine at <a href="30423.html">30423</a>.
 </tr>
 <tr>
 <td class="address-1"><span id="60466"></span>60466</td>
-<td class="instruction">JP <a href="30423.html#30559">30559</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="30423.html#30559">30559</a>.</td>
+<td class="instruction">JP <a href="30423.html#30559">Handler_GhostRider_4</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="30423.html#30559">Handler_GhostRider_4</a>.</td>
 </tr>
 </table>
 <table class="asm-navigation">
