--- a/dec/asm/60729.html
+++ b/dec/asm/60729.html
@@ -41,7 +41,7 @@ Next: <a href="60754.html">60754</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="30423.html">30423</a>.
+Used by the routine at <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
