--- a/dec/buffers/gbuffer.html
+++ b/dec/buffers/gbuffer.html
@@ -333,9 +333,27 @@ See <a href="../asm/25620.html">SetRandomNumberSeed</a> for how this is generate
 </tr>
 <tr>
 <td class="map-g"><span id="30788"></span><a href="../asm/30788.html">30788</a></td>
-<td class="map-length">7</td>
+<td class="map-length">2</td>
 <td class="map-g-desc">
 <div class="map-entry-title-11"><a class="map-entry-title" href="../asm/30788.html">Score</a></div>
+<div class="map-entry-desc">
+</div>
+</td>
+</tr>
+<tr>
+<td class="map-g"><span id="30790"></span><a href="../asm/30790.html">30790</a></td>
+<td class="map-length">2</td>
+<td class="map-g-desc">
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/30790.html">Game status buffer entry at 7846</a></div>
+<div class="map-entry-desc">
+</div>
+</td>
+</tr>
+<tr>
+<td class="map-g"><span id="30792"></span><a href="../asm/30792.html">30792</a></td>
+<td class="map-length">3</td>
+<td class="map-g-desc">
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/30792.html">Game status buffer entry at 7848</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
@@ -344,7 +362,7 @@ See <a href="../asm/25620.html">SetRandomNumberSeed</a> for how this is generate
 <td class="map-g"><span id="30795"></span><a href="../asm/30795.html">30795</a></td>
 <td class="map-length">5</td>
 <td class="map-g-desc">
-<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/30795.html">Target</a></div>
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/30795.html">Displayed Score</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
