--- a/dec/maps/all.html
+++ b/dec/maps/all.html
@@ -725,7 +725,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">97</td>
 <td class="map-c"><span id="29025"></span><a href="../asm/29025.html">29025</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/29025.html">Routine at 7161</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/29025.html">Check Demo Mode</a></div>
 </td>
 </tr>
 <tr>
@@ -853,7 +853,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">32</td>
 <td class="map-c"><span id="29728"></span><a href="../asm/29728.html">29728</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/29728.html">Routine at 7420</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/29728.html">Update Score Display</a></div>
 </td>
 </tr>
 <tr>
@@ -1021,7 +1021,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">215</td>
 <td class="map-c"><span id="30423"></span><a href="../asm/30423.html">30423</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30423.html">Routine at 76D7</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30423.html">Handler: Ghost Rider</a></div>
 </td>
 </tr>
 <tr>
@@ -1338,10 +1338,26 @@ gtag('config', 'G-75RERFCHBG');
 </tr>
 <tr>
 <td class="map-page">120</td>
+<td class="map-byte">70</td>
+<td class="map-g"><span id="30790"></span><a href="../asm/30790.html">30790</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30790.html">Game status buffer entry at 7846</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">120</td>
+<td class="map-byte">72</td>
+<td class="map-g"><span id="30792"></span><a href="../asm/30792.html">30792</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30792.html">Game status buffer entry at 7848</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">120</td>
 <td class="map-byte">75</td>
 <td class="map-g"><span id="30795"></span><a href="../asm/30795.html">30795</a></td>
 <td class="map-g-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30795.html">Target</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30795.html">Displayed Score</a></div>
 </td>
 </tr>
 <tr>
@@ -1973,7 +1989,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">110</td>
 <td class="map-c"><span id="60526"></span><a href="../asm/60526.html">60526</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60526.html">Routine at EC6E</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60526.html">Player Input</a></div>
 </td>
 </tr>
 <tr>
