--- a/maps/all.html
+++ b/maps/all.html
@@ -725,7 +725,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">97</td>
 <td class="map-c"><span id="7161"></span><a href="../asm/7161.html">7161</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7161.html">Routine at 7161</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7161.html">Check Demo Mode</a></div>
 </td>
 </tr>
 <tr>
@@ -853,7 +853,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">32</td>
 <td class="map-c"><span id="7420"></span><a href="../asm/7420.html">7420</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7420.html">Routine at 7420</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7420.html">Update Score Display</a></div>
 </td>
 </tr>
 <tr>
@@ -1021,7 +1021,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">215</td>
 <td class="map-c"><span id="76d7"></span><a href="../asm/76D7.html">76D7</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/76D7.html">Routine at 76D7</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/76D7.html">Handler: Ghost Rider</a></div>
 </td>
 </tr>
 <tr>
@@ -1338,10 +1338,26 @@ gtag('config', 'G-75RERFCHBG');
 </tr>
 <tr>
 <td class="map-page">120</td>
+<td class="map-byte">70</td>
+<td class="map-g"><span id="7846"></span><a href="../asm/7846.html">7846</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7846.html">Game status buffer entry at 7846</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">120</td>
+<td class="map-byte">72</td>
+<td class="map-g"><span id="7848"></span><a href="../asm/7848.html">7848</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7848.html">Game status buffer entry at 7848</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">120</td>
 <td class="map-byte">75</td>
 <td class="map-g"><span id="784b"></span><a href="../asm/784B.html">784B</a></td>
 <td class="map-g-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/784B.html">Target</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/784B.html">Displayed Score</a></div>
 </td>
 </tr>
 <tr>
@@ -1973,7 +1989,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">110</td>
 <td class="map-c"><span id="ec6e"></span><a href="../asm/EC6E.html">EC6E</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC6E.html">Routine at EC6E</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC6E.html">Player Input</a></div>
 </td>
 </tr>
 <tr>
